# chatbot-app

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  FLOW_DIAGRAMS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  QUICKSTART.md  README.md  docker-compose.prod.yml  docker-compose.yml  example_usage.py
.github/workflows/: ci.yml
backend/: .env.example  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  database.py  llm_adapter.py  logging_config.py  main.py  memory_engine.py  pyproject.toml  requirements.txt  ruff.toml  schemas.py  start.sh  test_api.py  test_integration.py  validate.py  vector_store.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py
docs/: deploy-ec2.md
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/test/: page.test.tsx  setup.ts
nginx/: nginx.conf
scripts/: setup-ec2.sh
